--- a/home/build.gradle
+++ b/home/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 24
     buildToolsVersion "24.0.1"
 
     defaultConfig {
         applicationId "silver.reminder"
-        minSdkVersion 23
-        targetSdkVersion 23
+        minSdkVersion 24
+        targetSdkVersion 24
         versionCode 1
         versionName "1.0"
     }
@@ -22,9 +22,9 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile project(':care')
-    compile project(':inventory')
-    compile project(':itinerary')
+    compile 'com.android.support:appcompat-v7:24.2.0'
+    //compile project(':care')
+    //compile project(':inventory')
+    //compile project(':itinerary')
     compile 'org.freemarker:freemarker:2.3.25-incubating'
 }
